<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="@id/guideline7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/guideline1"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.085" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@drawable/logo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.99999" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.00001" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.99999" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/guideline3"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText_username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:background="#FFD18C"
                android:ems="10"
                android:hint="@string/label_username"
                android:inputType="textPersonName"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:background="#FFD18C"
                android:ems="10"
                android:hint="@string/label_email"
                android:inputType="textEmailAddress"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton_Male"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Male"
                    android:textColorLink="#fff"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioButton_Female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:text="Female"
                    android:textSize="18sp" />
            </RadioGroup>

            <EditText
                android:id="@+id/editText_phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="#FFD18C"
                android:ems="10"
                android:hint="phone"
                android:inputType="textPersonName"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="#FFD18C"
                android:ems="10"
                android:hint="@string/label_password"
                android:inputType="textPassword"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText_comfirmpassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:background="#FFD18C"
                android:ems="10"
                android:hint="@string/comfirm_password"
                android:inputType="textPassword"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#FF8933"
                android:ems="10"
                android:onClick="btn_register"
                android:text="@string/btn_register"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Already have an account?"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_signin"
                android:layout_width="79dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="225dp"
                android:layout_marginTop="-26dp"
                android:layout_toEndOf="@id/textView"
                android:layout_toRightOf="@id/textView"
                android:onClick="login"
                android:text="Sign In"
                android:textColor="#FF8933"
                android:textSize="18sp" />


        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />


</androidx.constraintlayout.widget.ConstraintLayout>